# multi-crawler

./: .env.local  .env.prod  .gitignore  .pre-commit-config.yaml  README.md  build.bat  build.sh  install_chromedriver.sh  main.spec  pyproject.toml
assets/: multic-crawler.icns
src/: main.py
src/multi_crawler/: main.py
src/multi_crawler/config/: app_logging.py  logging.py
src/multi_crawler/crawler/: agencies.py  apps.py  bot.py  selenium_test.py  skins.py  to_excel.py  utils.py
src/multi_crawler/gui/: crawler-ui.py  crawler_ui.py  grid-test.py  gui_utils.py  main-app.py  test.py
src/ui/: untitled.ui
tests/: test_random.py
